# fused-local-corr

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
local_corr/: __init__.py  ops.py
local_corr/csrc/cuda/: corr.cu
test/: benchmark_roma_inference.py  benchmark_roma_train.py  test_corr.py  test_corr_backward.py  test_corr_bilinear.py  test_corr_bilinear_backward.py  test_corr_bilinear_backward_again.py  test_corr_bilinear_roma_codebase.py  test_extension_cpu.py  test_extension_cuda.py  test_extension_cuda_bilinear.py  test_local_corr.py
